# island

./: .gitattributes  .gitignore  Makefile  README.md  anime.json  animeplot.gp  fetch.py  fetch.sh  logconf.yaml  main.py  pyproject.toml  requirements.txt
dataset/: records.csv  records.db  reviews.csv  reviews.db  staffs.csv  staffs.db  stat.sh  works.csv  works.db
island/database/: __init__.py
island/staff/: model.py  pagerank.py
templates/: anime.html  index.html  recommend.html
