[tool.poetry]
name = "island"
version = "0.1.0"
description = ""
authors = ["cympfh <cympfh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "1.4.1"
implicit = "0.4.2"
fastapi = "0.65.2"
uvicorn = "0.11.7"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
