[tool.poetry]
name = "island"
version = "0.1.0"
description = ""
authors = ["cympfh <cympfh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "1.4.1"
implicit = "^0.5.2"
fastapi = "0.65.2"
uvicorn = "^0.17.5"
rich = "^11.2.0"
requests = "^2.27.1"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
python-language-server = "^0.36.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
